# pyhton_multi_version_project

my_project/: .gitignore  README.md  pyproject.toml
my_project/main_64/: config.yaml  pyproject.toml  requirements.txt
my_project/main_64/src/: communication.py  main.py  process_manager.py
my_project/module_32/: config.yaml  pyproject.toml  requirements.txt
my_project/module_32/src/: module_32.py
my_project/module_64/: .gitignore  config.yaml  pyproject.toml  requirements.txt
my_project/module_64/src/: demo_detect_and_compare.py  demo_local_detect_and_compare.py  demo_request.py  detect_server.py  image_server.py  module_64.py  predict.py
my_project/scripts/: build.py  install_requirements.sh  start_all.py
my_project/shared/protocols/: api.proto
my_project/shared/utils/: logger.py  process_manager.py
