[project]
name = "module-64"
version = "0.1.0"
description = ""
authors = [
    {name = "biezhihua",email = "biezhihua@gmail.com"}
]
readme = "README.md"
requires-python = ">= 3.13.5"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "onnx (>=1.19.0,<2.0.0)",
    "onnxruntime (>=1.22.1,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "requests (>=2.32.5,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
